src/objects/Milestone1_Time__c.object
<CustomObject>
    <description>Force.com Labs - PM - A time entry record which allows users to log times against milestone tasks.</description>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>The date the time was incurred. Defaults to today if left blank.</inlineHelpText>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A description about the time. For example, why the time was incurred.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <inlineHelpText>The number of hours charged. Note: This cannot be more than 1 day (24 hours).</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>ImportID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user who incurred the time being charged. Defaults to current user if left blank.</inlineHelpText>
        <label>Incurred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Times_Incurred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <inlineHelpText>The task that is having time charged to it.</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Project_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time</label>
    <nameField>
        <displayFormat>PT{0000}</displayFormat>
        <label>Project Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hours_Not_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>Hours__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Hours__c</errorDisplayField>
        <errorMessage>The hours entered cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Time_Hours_Less_Than_24_Hours</fullName>
        <active>true</active>
        <description>The time entered cannot be greater than one full day (24 hours).</description>
        <errorConditionFormula>Hours__c  &gt; 24</errorConditionFormula>
        <errorDisplayField>Hours__c</errorDisplayField>
        <errorMessage>The hours cannot exceed 24.</errorMessage>
    </validationRules>
</CustomObject>